test/sema/excess-argument-label.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(int a) { }

void main() {
    // CHECK: [[@LINE+1]]:7: error: invalid argument name 'foo' for parameter 'a'
    f(foo: 0);
}
